# backtests

./: pyproject.toml
scripts/plotting/: plot_ma.py
src/: ma_crossover.py
