[tool.poetry]
name = "backtests"
version = "0.1.0"
description = ""
authors = ["mmrakib <mohammadmrakib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
yfinance = "^0.2.50"
backtesting = "^0.3.3"
tk = "^0.1.0"
pyqt5 = "^5.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
